@@ -12,11 +12,14 @@ import com.example.chess.repository.PlayerRepository;
 import com.example.chess.service.PlayerService;
 import com.example.chess.utils.PasswordUtil;
 import jakarta.transaction.Transactional;
-import org.springframework.stereotype.Service;
-
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import org.springframework.stereotype.Service;
 
 @Service
 public class PlayerServiceImpl implements PlayerService {
@@ -34,7 +37,8 @@ public class PlayerServiceImpl implements PlayerService {
     }
 
     @Override
-    public List<PlayerDtoResponse> getPlayersByNameAndEmail(String name, String email) throws NotFoundException {
+    public List<PlayerDtoResponse> getPlayersByNameAndEmail(String name, String email)
+            throws NotFoundException {
         List<Player> players = new ArrayList<>();
 
         if (name != null && !name.isEmpty()) {
@@ -79,18 +83,22 @@ public class PlayerServiceImpl implements PlayerService {
     }
 
     @Override
+    @Transactional
     public List<GameInfoDtoResponse> getAllGamesInfo(Long id) throws InvalidParamException {
         playerRepository.findById(id).orElseThrow(InvalidParamException::new);
-        List<GameInfo> gamesInfo = Stream.concat(playerRepository.findAllGamesInfoAsWhitePlayer(id).stream(),
-                playerRepository.findAllGamesInfoAsBlackPlayer(id).stream()).collect(Collectors.toList());
-        List<GameInfo> sortedGamesInfo = gamesInfo.stream().
-                sorted(Comparator.comparing(GameInfo::getStartTime)).collect(Collectors.toList());
-        return sortedGamesInfo.stream().map(GameInfoMapper::toDto).collect(Collectors.toList());
+        List<GameInfo> gamesInfo =
+                Stream.concat(playerRepository.findAllGamesInfoAsWhitePlayer(id).stream(),
+                playerRepository.findAllGamesInfoAsBlackPlayer(id).stream())
+                        .toList();
+        List<GameInfo> sortedGamesInfo = gamesInfo.stream()
+                .sorted(Comparator.comparing(GameInfo::getStartTime)).toList();
+        return sortedGamesInfo.stream().map(GameInfoMapper::toDto).toList();
     }
 
     @Override
     @Transactional
-    public PlayerDtoResponse sendFriendRequest(long senderId, String recipientEmail) throws InvalidParamException {
+    public PlayerDtoResponse sendFriendRequest(long senderId, String recipientEmail)
+            throws InvalidParamException {
         Optional<Player> senderOpt = playerRepository.findById(senderId);
         Optional<Player> recipientOpt = playerRepository.findByEmail(recipientEmail);
 
@@ -119,12 +127,14 @@ public class PlayerServiceImpl implements PlayerService {
     @Override
     public Set<PlayerDtoResponse> getFriendRequests(long id) throws InvalidParamException {
         playerRepository.findById(id).orElseThrow(InvalidParamException::new);
-        return playerRepository.findAllFriendsRequests(id).stream().map(PlayerMapper::toDto).collect(Collectors.toSet());
+        return playerRepository.findAllFriendsRequests(id).stream().map(PlayerMapper::toDto)
+                .collect(Collectors.toSet());
     }
 
     @Override
     @Transactional
-    public PlayerDtoResponse addFriend(Long senderId, String recipientEmail) throws InvalidParamException {
+    public PlayerDtoResponse addFriend(Long senderId, String recipientEmail)
+            throws InvalidParamException {
         Optional<Player> senderOpt = playerRepository.findById(senderId);
         Optional<Player> recipientOpt = playerRepository.findByEmail(recipientEmail);
 
@@ -133,7 +143,8 @@ public class PlayerServiceImpl implements PlayerService {
 
         Player sender = senderOpt.get();
         Player recipient = recipientOpt.get();
-        if (!recipient.getFriendRequests().contains(sender) || !sender.getFriendRequests().contains(recipient)) {
+        if (!recipient.getFriendRequests().contains(sender)
+                || !sender.getFriendRequests().contains(recipient)) {
             throw new InvalidParamException(); // переписать новый тип исключения
         }
         sender.getFriendRequests().remove(recipient);
@@ -145,16 +156,37 @@ public class PlayerServiceImpl implements PlayerService {
 
     @Override
     @Transactional
-    public PlayerDtoResponse deleteFriend(long playerId, String friendEmail) throws InvalidParamException {
+    public PlayerDtoResponse deleteFriend(long playerId, String friendEmail)
+            throws InvalidParamException {
         Optional<Player> playerOpt = playerRepository.findById(playerId);
         Optional<Player> friendOpt = playerRepository.findByEmail(friendEmail);
         playerOpt.orElseThrow(InvalidParamException::new);
         friendOpt.orElseThrow(InvalidParamException::new);
-        if (!friendOpt.get().getFriends().contains(playerOpt.get())) {
+        Player friend = friendOpt.get();
+        Player player = playerOpt.get();
+        if (!friend.getFriends().contains(playerOpt.get())) {
             throw new InvalidParamException();
         }
-        playerOpt.get().getFriends().remove(friendOpt.get());
-        friendOpt.get().getFriends().remove(playerOpt.get());
-        return PlayerMapper.toDto(friendOpt.get());
+        player.getFriends().remove(friendOpt.get());
+        friend.getFriends().remove(playerOpt.get());
+        return PlayerMapper.toDto(friend);
+    }
+
+    @Override
+    @Transactional
+    public PlayerDtoResponse deletePlayerById(long id)
+            throws NotFoundException {
+        Optional<Player> playerOpt = playerRepository.findById(id);
+        playerOpt.orElseThrow(NotFoundException::new);
+        Player player = playerOpt.get();
+        Set<Player> friends = player.getFriends();
+        player.setFriends(null);
+        Set<Player> friendsRequests = player.getFriendRequests();
+        player.setFriendRequests(null);
+
+        playerRepository.deleteFriendshipsByPlayerId(id);
+        playerRepository.deleteFriendRequestsByPlayerId(id);
+        playerRepository.delete(player);
+        return PlayerMapper.toDto(player);
     }
 }
